--- a/css/leo_weather.css
+++ b/css/leo_weather.css
@@ -1,15 +1,19 @@
 .leo-weather-container {
-  background-color: green;
-  color: #eeeeee;
+  display: inline;
   width: 100%;
   max-width: 400px;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
+.search-city {
+  width: 30%;
+}
+
 .leo-weather-list {
   margin: auto;
   padding: 20px;
+  width: 50%;
 }
 .city {
   margin-top: -15px;
