--- a/assets/css/leo_weather.css
+++ b/assets/css/leo_weather.css
@@ -1,12 +1,11 @@
+
 #mapid {
-  height: 250px;
-  position: relative;
-  margin-top: 30px;
+  height: 350px;
 
 }
 
 .coord {
- display: none;
+  display: none;
 }
 .leo-weather-container {
   display: inline;
@@ -21,7 +20,6 @@
 }
 
 .leo-weather-list {
-  margin: auto;
   padding: 20px;
   width: 50%;
 }
@@ -35,15 +33,20 @@
   text-align: center;
 }
 
-.weather-icon {
-  float: right;
-  width: 60px;
-  height: 60px;
-  padding: 5px;
+.weather-icon-2x {
+  position: relative;
+  top: -30px;
+}
+.weather-icon-2x-map {
+  position: relative;
+  top: -280px;
+  z-index: 1000;
+  left: 120px;
+  opacity: 0.6;
 }
 .temperature {
   font-weight: 600;
-  font-size: 36px;
+  font-size: 24px;
   line-height: 1;
 }
 
@@ -52,25 +55,102 @@
   font-size: 16px;
   font-weight: 600;
 }
-.leo-weather-option {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+
+.container {
   width: 100%;
 }
-.leo-weather-row {
-  width: 49%;
-  margin-bottom: 20px;
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5px;
 }
-@media screen and (min-width: 480px) {
-  .leo-weather-row {
-    width: 33%;
-  }
-  .leo-weather-option {
-    justify-content: flex-start;
+
+/* content */
+.row div {
+  padding: 3%;
+}
+
+
+/* 1/12 */
+.col-1 {
+  width: 8.33%;
+}
+
+/* 2/12 */
+.col-2 {
+  width: 16.66%;
+}
+
+/* 3/12 */
+.col-3 {
+  width: 25%;
+}
+
+/* 4/12 */
+.col-4 {
+  width: 33.33%
+}
+
+/* 5/12 */
+.col-5 {
+  width: 41.66%;
+}
+
+/* 6/12 */
+.col-6 {
+  width: 50%;
+}
+
+/* 7/12 */
+.col-7 {
+  width: 58.33%;
+}
+
+/* 8/12 */
+.col-8 {
+  width: 66.66%;
+}
+
+/* 9/12 */
+.col-9 {
+  width: 75%;
+}
+
+/* 10/12 */
+.col-10 {
+  width: 83.33%;
+}
+
+/* 11/12 */
+.col-11 {
+  width: 91.66%;
+}
+
+/* 12/12 */
+.col-12 {
+  width: 100%;
+}
+
+/* viewport <= 1000px */
+@media screen and (max-width: 1000px) {
+  * {
+    font-size: 1em;
   }
 }
+
+/* viewport <= 630px */
+@media screen and (max-width: 630px) {
+  .row div {
+    padding: 1.5%;
+  }
+}
+
+/* viewport <= 500px */
+@media screen and (max-width: 500px) {
+  * {
+    font-size: 0.9em;
+  }
+}
+
