--- a/templates/leo-weather.html.twig
+++ b/templates/leo-weather.html.twig
@@ -6,69 +6,79 @@
  * - leo_weather_detail: array of weather list.
  */
 #}
-<div class="leo-weather-container">
-  <div class="search-city">
-    {# kint(leo_weather_detail)
-    #}
-    {{ leo_weather_detail.form }}
-  </div>
-  <div class="leo-weather-list">
+<div class="container leo-weather-container">
 
-    {% if (leo_weather_detail.name) and (leo_weather_detail.country) %}
-    <div class="city"><h3>{{ leo_weather_detail.name }}, {{ leo_weather_detail.country }}</h3></div>
-    {% elseif (leo_weather_detail.name) %}
-    <div class="city"><h3>{{ leo_weather_detail.name }}</h3></div>
-    {% elseif (leo_weather_detail.country) %}
-    <div class="city"><h3>{{ leo_weather_detail.country }}</h3></div>
-    {% endif %}
-    {% if (leo_weather_detail.weather.image) %}
-    <div class="weather-icon">
-      <span class="data"><img src="http://openweathermap.org/img/w/{{ leo_weather_detail.weather.image }}.png"/></span>
-    </div>
-    {% endif %}
-    {% if(leo_weather_detail.temp) %}
-    <div class="temperature">
-      <span class="label">Temp: {{ leo_weather_detail.temp }}</span>
-    </div>
-    {% endif %}
-    {% if (leo_weather_detail.weather.desc) %}
-    <div class="weather-datail">
-      <span class="label">{{ leo_weather_detail.weather.desc }}</span>
-    </div>
-    {% endif %}
-    {% if(leo_weather_detail.humidity) %}
-    <div class="humidity">
-      <span class="label"> Humidity {{ leo_weather_detail.humidity }}</span>
-    </div>
-    {% endif %}
-    {% if(leo_weather_detail.temp_max) %}
-    <div class="maximum-temprature">
-      <span class="label"> H {{ leo_weather_detail.temp_max }}</span>
-    </div>
-    {% endif %}
-    {% if(leo_weather_detail.temp_min) %}
-    <div class="minimum-tempreature">
-      <span class="label"> L {{ leo_weather_detail.temp_min }}</span>
-    </div>
-    {% endif %}
-    <div class="leo-weather-option">
-      {% if(leo_weather_detail.pressure) %}
-      <div class="pressure leo-weather-row">
-        <span class="label"> pressure <br> {{ leo_weather_detail.pressure }} hpa</span>
-      </div>
+  {{ leo_weather_detail.form }}
+
+  <div class="row">
+    <div class="leo-weather-list col-6">
+
+      {% if(leo_weather_detail.temp) %}
+        <div class="temperature">
+          <span class="label">Temp: {{ leo_weather_detail.temp }}</span>
+        </div>
+      {% endif %}
+      {% if (leo_weather_detail.weather.desc) %}
+        <div class="weather-datail">
+          <span class="label">{{ leo_weather_detail.weather.desc }}</span>
+        </div>
+      {% endif %}
+      {% if(leo_weather_detail.humidity) %}
+        <div class="humidity">
+          <span class="label"> Humidity {{ leo_weather_detail.humidity }}</span>
+        </div>
+      {% endif %}
+      {% if(leo_weather_detail.temp_max) %}
+        <div class="maximum-temprature">
+          <span class="label"> H {{ leo_weather_detail.temp_max }}</span>
+        </div>
+      {% endif %}
+      {% if(leo_weather_detail.temp_min) %}
+        <div class="minimum-tempreature">
+          <span class="label"> L {{ leo_weather_detail.temp_min }}</span>
+        </div>
       {% endif %}
 
+      {% if(leo_weather_detail.pressure) %}
+        <div class="leo-weather-option">
+            <span class="label"> pressure {{ leo_weather_detail.pressure }} hpa</span>
+        </div>
+      {% endif %}
+
+
+      {% if(leo_weather_detail.lat) %}
+
+        <div class="coord lat leo-weather-row" id="lat">
+          {{ leo_weather_detail.lat }}
+        </div>
+        <div class="coord lon leo-weather-row" id="lon">
+          {{ leo_weather_detail.lon }}
+        </div>
+      {% endif %}
+    </div>
+    <div class="search-city col-3">
+      <div class="city"><h2>
+          {% if (leo_weather_detail.name) and (leo_weather_detail.country) %}
+            {{ leo_weather_detail.name }}, {{ leo_weather_detail.country }}
+          {% elseif (leo_weather_detail.name) %}
+            {{ leo_weather_detail.name }}
+          {% elseif (leo_weather_detail.country) %}
+            {{ leo_weather_detail.country }}
+          {% endif %}
+        </h2></div>
+      {% if(leo_weather_detail.lat) %}
+          <div id="mapid" ></div>
+        {% if (leo_weather_detail.weather.image) %}
+          <div class="weather-icon-2x-map">
+            <span class="data"><img src="http://openweathermap.org/img/wn/{{ leo_weather_detail.weather.image }}@2x.png"/></span>
+          </div>
+        {% endif %}
+      {% endif %}
     </div>
 
-
-    {% if(leo_weather_detail.lat) %}
-      <div class="coord lat leo-weather-row" id="lat">
-        {{ leo_weather_detail.lat }}
-      </div>
-      <div class="coord lon leo-weather-row" id="lon">
-        {{ leo_weather_detail.lon }}
-      </div>
-      <div id="mapid"></div>
-    {% endif %}
   </div>
+
+
+
+
 </div>
