--- a/assets/css/leo_weather.css
+++ b/assets/css/leo_weather.css
@@ -52,7 +52,7 @@
 
 .weather-datail {
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 22px;
   font-weight: 600;
 }
 
@@ -145,12 +145,22 @@
   .row div {
     padding: 1.5%;
   }
+
+  /* 6/12 */
+  .col-6 {
+    width: 100%;
+  }
+
+  /* 3/12 */
+  .col-3 {
+    width: 100%;
+  }
 }
 
 /* viewport <= 500px */
 @media screen and (max-width: 500px) {
   * {
-    font-size: 0.9em;
+    font-size: 1em;
   }
 }
 
